--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@visx/text": "^3.12.0",
+    "d3": "^7.9.0",
+    "echarts": "^5.5.1",
     "html-react-parser": "^5.1.18",
     "marked": "^15.0.3",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
+    "react-d3-speedometer": "^2.2.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
+    "react-speedometer": "^0.1.2",
     "react-toastify": "^10.0.6",
     "web-vitals": "^2.1.4"
   },
