--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-d3-speedometer": "^2.2.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "react-speedometer": "^0.1.2",
